fix css collapse

--- a/content/content_scripts.css
+++ b/content/content_scripts.css
@@ -1,29 +1,78 @@
 #hidden_id{
-    top: 50px  !important;
+    top: 50px  ;
     z-index: 2147483647;   
     color: 'red';
     background-color: rgba(255, 255, 0, 0.3);
-    height: '150px' !important;
-    width: '100px'  !important;
+    height: '150px' ;
+    width: '100px'  ;
     font-size: 3rem;
     background-color: 'green';
 }
 .displayFix{
-    top: 130px  !important;
-    position: fixed  !important;
+    top: 130px;
+    position: fixed;
     z-index: 2147483647;   
     font-size: smaller;
 }
+.fnjdsanfsksadf{
+  display: inline-block ;
+  font-weight: 400;
+  color: #212529;
+  text-align: center ;
+  vertical-align: middle ;
+  background-color: transparent ;
+  border: 1px solid transparent ;
+  padding: 0.375rem 0.75rem ;
+  font-size: 1rem ;
+  line-height: 1.5 ;
+  border-radius: 0.25rem ;
+  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+}
+.fnjdsanfsksadf:hover {
+  color: #212529;
+  text-decoration: none;
+}
+.fnjdsanfsksadf:focus, .fnjdsanfsksadf.focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
 .restart-button{
-    left: 70px   !important;
-    width: auto !important;
-    height: auto !important;
+    left: 70px   ;
+    width: auto ;
+    height: auto ;
+    color: #fff ;
+    background-color: #28a745 ;
+    border-color: #28a745 ;
+}
+.restart-button:hover {
+  color: #fff;
+  background-color: #218838;
+  border-color: #1e7e34;
 }
 .stop-button{
-    width: auto !important;
-    height: auto !important;
+    /* left: 10px   ; */
+    width: auto ;
+    height: auto ;
+    color: #212529;
+    background-color: #ffc107;
+    border-color: #ffc107;
 }
-
+.stop-button:hover {
+  color: #212529;
+  background-color: #e0a800;
+  border-color: #d39e00;
+}
 .delete-button{
-    left: 190px   !important;
+    left: 190px   ;
+    color: #fff;
+    background-color: #dc3545;
+    border-color: #dc3545;
+}
+.delete-button:hover {
+  color: #fff;
+  background-color: #c82333;
+  border-color: #bd2130;
 }
